Set SDK version informaiton

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,4 +3,6 @@
       package="com.sattvik.android_toolkit"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-sdk android:minSdkVersion="7"
+              android:targetSdkVersion="10"/>
 </manifest> 
