Allow reflection warnings

--- a/test-app/build.properties
+++ b/test-app/build.properties
@@ -16,3 +16,4 @@
 # The password will be asked during the build when you use the 'release' target.
 
 android.library.reference.1=..
+clojure.warn.reflection=true
