--- a/test-app/AndroidManifest.xml
+++ b/test-app/AndroidManifest.xml
@@ -6,14 +6,16 @@
     <uses-sdk android:minSdkVersion="7"
               android:targetSdkVersion="10"/>
     <application android:label="@string/app_name" android:icon="@drawable/icon">
-	<activity android:name="TestActivity"
-		  android:label="@string/app_name">
-	    <intent-filter>
-		<action android:name="android.intent.action.MAIN" />
-		<category android:name="android.intent.category.LAUNCHER" />
-	    </intent-filter>
-	</activity>
+        <activity android:name="TestActivity"
+                android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_LOGS"/>
 </manifest> 
+
+<!-- vim:set ts=4 sw=4 et: -->
