Update build system to be compatible with SDK r14 and up

--- a/test/ant.properties
+++ b/test/ant.properties
@@ -15,4 +15,5 @@
 #  'key.alias' for the name of the key to use.
 # The password will be asked during the build when you use the 'release' target.
 
+android.library.reference.1=..
 tested.project.dir=../test-app
